Should have fixed both homeworks. Updated cascades model properly.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 HW1/fb/Facebook 100/*
+Facebook 100-20220123T181745Z-001.zip
+networks_hw.zip
+spanish map
+tweet data
+tweet data.zip
+twitter_analysis.py
