--- a/requirements.txt
+++ b/requirements.txt
@@ -1,111 +1,205 @@
+absl-py==0.15.0
+access==1.1.3
+affine==2.3.0
+anyio==3.5.0
 appdirs==1.4.4
 apturl==0.5.2
 argon2-cffi==21.1.0
+arviz==0.12.0
 asciitree==0.3.3
 astral==2.2
+astunparse==1.6.3
 atomicwrites==1.1.5
 attrs==21.2.0
+aws-requests-auth==0.4.3
+Babel==2.9.1
 backcall==0.2.0
 bcrypt==3.1.7
-beautifulsoup4==4.8.2
+beautifulsoup4==4.10.0
 bleach==4.1.0
 blinker==1.4
 blosc==1.7.0
+bokeh==2.4.2
+boto3==1.21.15
+botocore==1.24.15
 Bottleneck==1.2.1
+bqplot==0.12.32
+branca==0.4.2
 Brlapi==0.7.0
 bs4==0.0.1
-cachetools==4.0.0
+cachetools==5.0.0
+CausalInference==0.1.3
 certifi==2021.10.8
 cffi==1.14.6
 cftime==1.1.0
 chardet==3.0.4
 charset-normalizer==2.0.6
+clang==5.0
 click==8.0.3
 click-config-file==0.6.0
 click-plugins==1.1.1
 cligj==0.7.2
 cloudpickle==1.3.0
 colorama==0.4.3
+colorcet==3.0.0
+colour==0.1.5
 command-not-found==0.3
 configobj==5.0.6
+coverage==5.5
 cryptography==2.8
 cssselect==1.1.0
 cupshelpers==1.0
 cycler==0.10.0
+cykhash==2.0.0
+Cython==0.29.27
 dask==2.8.1+dfsg
+dataclasses==0.6
 dbus-python==1.2.16
 debugpy==1.5.0
 decorator==5.1.0
 defer==1.0.6
 defusedxml==0.7.1
+deprecat==2.1.1
+Deprecated==1.2.13
+deprecation==2.1.0
+descartes==1.1.0
+dill==0.3.4
+distlib==0.3.0
 distro==1.4.0
 distro-info===0.23ubuntu1
 Django==2.2.12
 django-haystack==2.8.1
+dm-tree==0.1.6
 duplicity==0.8.12.0
+earthengine-api==0.1.296
+ee-extra==0.0.10
 entrypoints==0.3
+esda==2.4.1
 et-xmlfile==1.0.1
+eyed3==0.9.6
 f.lux indicator applet==1.1.11rc0
 fake-useragent==0.1.11
 fasteners==0.14.1
+fastprogress==1.0.2
+ffmpeg-python==0.2.0
+filelock==3.0.12
+filetype==1.0.10
 Fiona==1.8.20
+flake8==3.7.9
+flatbuffers==1.12
+folium==0.12.1.post1
 fsspec==0.6.1
 future==0.18.2
+gast==0.4.0
 GDAL==3.0.4
+geeadd==0.5.5
+geemap==0.11.1
+gensim==4.1.2
+geocoder==1.38.1
 geographiclib==1.52
+geojson==2.5.0
 geopandas==0.10.2
 geopy==2.2.0
 gevent==1.4.0
-google-api-python-client==1.7.11
-google-auth==1.5.1
+giddy==2.3.3
+gitdb==4.0.9
+GitPython==3.1.27
+google-api-core==2.5.0
+google-api-python-client==1.12.10
+google-auth==2.6.0
 google-auth-httplib2==0.0.3
-greenlet==0.4.15
+google-auth-oauthlib==0.4.6
+google-cloud-core==2.2.2
+google-cloud-storage==2.1.0
+google-crc32c==1.3.0
+google-pasta==0.2.0
+google-resumable-media==2.1.0
+googleapis-common-protos==1.54.0
+googledrivedownloader==0.4
+gpflow==2.2.1
+greenlet==1.1.2
+grpcio==1.44.0
 gurobipy==9.1.2
 h5netcdf==0.7.1
-h5py==2.10.0
+h5py==3.1.0
+here-map-widget-for-jupyter==1.1.3
+holoviews==1.14.8
 html5lib==1.0.1
-httplib2==0.14.0
+httplib2==0.20.4
+httplib2shim==0.0.3
 humanize==3.13.1
 idna==3.2
 igraph==0.9.9
 imbalanced-learn==0.8.1
 imblearn==0.0
-importlib-metadata==1.5.0
+importlib-metadata==4.11.1
+inequality==1.0.0
+ipyevents==2.0.1
+ipyfilechooser==0.6.0
 ipykernel==6.4.1
+ipyleaflet==0.15.0
+ipympl==0.8.7
+ipynb-py-convert==0.4.6
 ipython==7.28.0
 ipython-genutils==0.2.0
+ipytree==0.2.1
 ipywidgets==7.6.5
+isort==4.3.4
 jdcal==1.0
 jedi==0.18.0
 Jinja2==3.0.2
+jmespath==0.10.0
 joblib==1.1.0
+joypy==0.2.6
+json5==0.9.6
+jsonlines==1.2.0
 jsonschema==4.0.1
 jupyter-client==7.0.6
 jupyter-core==4.8.1
+jupyter-server==1.13.4
+jupyterlab==3.2.8
 jupyterlab-pygments==0.1.2
+jupyterlab-server==2.10.3
 jupyterlab-widgets==1.0.2
+keras==2.8.0
+keras-nightly==2.5.0.dev2021032900
+Keras-Preprocessing==1.1.2
+keyboard==0.13.5
 keyring==18.0.1
 kiwisolver==1.3.2
 language-selector==0.1
 launchpadlib==1.10.13
 lazr.restfulclient==0.14.2
 lazr.uri==1.0.3
+libclang==13.0.0
+libpysal==4.6.0
+llvmlite==0.38.0
 locket==0.2.0
 lockfile==0.12.2
+logzero==1.7.0
 louis==3.12.0
 lxml==4.5.0
 macaroonbakery==1.3.1
 Mako==1.1.0
+mapclassify==2.4.3
+Markdown==3.3.6
 MarkupSafe==2.0.1
 matplotlib==3.4.3
 matplotlib-inline==0.1.3
+matplotlib-scalebar==0.8.0
+mccabe==0.6.1
+mgwr==2.1.2
 mistune==0.8.4
+momepy==0.5.2
 monotonic==1.5
 more-itertools==4.2.0
 mpi4py==3.0.3
 mpmath==1.2.1
 msgpack==0.6.2
+mss==6.1.0
+multipledispatch==0.6.0
 munch==2.5.0
+nbclassic==0.3.5
 nbclient==0.5.4
 nbconvert==6.2.0
 nbformat==5.1.3
@@ -113,126 +207,207 @@ nest-asyncio==1.5.1
 netaddr==0.7.19
 netCDF4==1.5.3
 netifaces==0.10.4
+networkx==2.6.3
+node2vec==0.4.4
 notebook==6.4.4
+numba==0.55.1
 numcodecs==0.0.0
 numexpr==2.7.1
-numpy==1.21.2
+numpy==1.21.5
 oauth2client==4.1.2
 oauthlib==3.1.1
+ogr==0.35.0
 olefile==0.46
+opencv-contrib-python==4.5.5.64
 openpyxl==3.0.3
+opt-einsum==3.3.0
+osmnx==1.1.2
+OSR==0.0.1
+overpy==0.6
 OWSLib==0.19.1
-packaging==21.0
+packaging==21.3
+palettable==3.3.0
 pandas==1.3.3
 pandocfilters==1.5.0
+panel==0.12.6
+param==1.12.0
 paramiko==2.6.0
 parse==1.19.0
 parso==0.8.2
 partd==1.0.0
+patsy==0.5.2
 perlcompat==1.1
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==8.3.2
-plotly==4.4.1
+plotly==5.5.0
 pluggy==0.13.0
+pointpats==2.2.0
 prometheus-client==0.11.0
 prompt-toolkit==3.0.20
-protobuf==3.6.1
+protobuf==3.19.4
 psutil==5.5.1
 psycopg2==2.8.6
 ptyprocess==0.7.0
+PuLP==2.6.0
 py==1.8.1
 py4j==0.10.9.3
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
 pycairo==1.16.2
+pycodestyle==2.5.0
 pycosat==0.6.3
 pycparser==2.20
+PyCRS==1.0.2
+pyct==0.4.8
 pycups==1.9.73
 PyDrive==1.3.1
 pyee==8.2.2
+pyflakes==2.1.1
+pygeos==0.12.0
+PyGithub==1.55
+pyglet==1.1.4
 Pygments==2.10.0
 PyGObject==3.36.0
-PyJWT==1.7.1
+PyJWT==2.3.0
 pymacaroons==0.13.0
-PyNaCl==1.3.0
+pymc3==3.11.5
+PyNaCl==1.5.0
 pyOpenSSL==19.0.0
 pyparsing==2.4.7
 PyPDF2==1.26.0
 pyppeteer==1.0.2
-pyproj==2.5.0
+pyproj==3.3.0
 PyQt5==5.14.1
 pyquery==1.4.3
+pyreadstat==1.1.4
 pyRFC3339==1.1
+pyrobuf==0.9.3
+pyrosm==0.6.1
 pyrsistent==0.18.0
+pysal==2.6.0
+pyshp==2.2.0
 Pytess==1.0.0
 pytest==4.6.9
 python-apt==2.0.0+ubuntu0.20.4.6
+python-box==5.4.1
 python-daemon==2.2.4
 python-dateutil==2.8.2
 python-debian===0.1.36ubuntu1
 python-dotenv==0.19.1
+python-gitlab==3.2.0
 python-pam==1.8.4
+python-rapidjson==1.5
 python-xapp==1.8.1
 python-xlib==0.23
 pytz==2021.3
+pyviz-comms==2.1.0
 pyxdg==0.26
 PyYAML==5.3.1
 pyzmq==22.3.0
+quantecon==0.5.2
+quilt3==4.1.0
 ranger-fm==1.9.3
+rasterio==1.2.10
+rasterstats==0.16.0
+ratelim==0.1.6
 regex==2022.1.18
 reportlab==3.5.34
 requests==2.27.1
+requests-futures==1.0.0
 requests-html==0.10.0
 requests-oauthlib==1.3.0
+requests-toolbelt==0.9.1
 requests-unixsocket==0.2.0
 retrying==1.3.3
 rsa==4.0
+Rtree==0.9.7
 ruamel.yaml==0.17.20
 ruamel.yaml.clib==0.2.6
+rvlib==0.0.6
+s3transfer==0.5.2
+sankee==0.0.7
 scikit-learn==1.0
-scipy==1.7.1
+scipy==1.7.3
 seaborn==0.11.2
 SecretStorage==2.3.1
+segregation==2.1.0
+semver==2.13.0
 Send2Trash==1.8.0
 Shapely==1.8.0
 simplejson==3.16.0
 sip==4.19.21
-six==1.16.0
+six==1.15.0
+smart-open==5.2.1
+smmap==5.0.0
+snap==0.5
+sniffio==1.2.0
+snuggs==1.4.7
 soupsieve==1.9.5
+spaghetti==1.6.5
+spglm==1.0.8
+spint==1.0.7
+splot==1.1.4
+spopt==0.2.1
+spreg==1.2.4
+spvcm==0.3.0
 SQLAlchemy==1.3.12
 sqlparse==0.2.4
+statsmodels==0.13.2
 sympy==1.8
 systemd-python==234
 tables==3.6.1
+tabulate==0.8.9
+tenacity==8.0.1
+tensorboard==2.8.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.8.0
+tensorflow-estimator==2.8.0
+tensorflow-io-gcs-filesystem==0.24.0
+tensorflow-probability==0.13.0
+termcolor==1.1.0
 terminado==0.12.1
 testpath==0.5.0
 texttable==1.6.4
+tf-estimator-nightly==2.8.0.dev2021122109
+Theano-PyMC==1.1.2
 threadpoolctl==3.0.0
+tobler==0.9.0
+toml==0.10.2
 toolz==0.9.0
 tornado==6.1
 tqdm==4.62.3
 traitlets==5.1.0
+traittypes==0.2.1
 twarc==2.8.3
 tweepy==4.4.0
+typing_extensions==4.1.1
 ubuntu-advantage-tools==27.3
 ubuntu-drivers-common==0.0.0
 ufw==0.36
 unattended-upgrades==0.1
-uritemplate==0.6
+uritemplate==3.0.1
 urllib3==1.26.7
 usb-creator==0.3.7
+virtualenv==20.0.17
+voila==0.3.1
 w3lib==1.22.0
 wadllib==1.3.3
 wcwidth==0.2.5
 webencodings==0.5.1
+websocket-client==1.2.3
 websockets==10.1
+Werkzeug==2.0.3
+whitebox==2.1.1
+whiteboxgui==0.7.0
 widgetsnbextension==3.5.1
+wrapt==1.12.1
 x2go==0.6.1.3
 x2gobroker==0.0.4.1
 X3DH==0.5.8
 xapian-haystack==2.1.0
-xarray==0.15.0
+xarray==2022.3.0
 xattr==0.9.6
 xcffib==0.8.1
 xdo==0.4
@@ -286,5 +461,6 @@ XStatic-term.js==0.0.7.0
 XStatic-tv4==1.2.7.0
 xtermcolor==1.2.1
 xvfbwrapper==0.2.9
+xyzservices==2022.1.1
 zarr==0.0.0
 zipp==1.0.0
